# mcpAccountingDemo

./: README.md  config.toml  package-lock.json  pyproject.toml  server.py  test_accounting.db
