[project]
name = "mcpserverdemo"
version = "0.1.0"
description = "Sample MCP server for ledger interaction."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.9.2",
    "python-dateutil>=2.9.0.post0",
    "sqlalchemy>=2.0.41",
    "strenum>=0.4.15",
    "toml>=0.10.2",
]
